--- a/eventDetails.html
+++ b/eventDetails.html
@@ -48,9 +48,9 @@
     </nav>
     <main>
         <div class="header">
-            <h1>
-                this is the event page
-            </h1>
+            <!-- <h1>
+                this is [Event Name]'s details page
+            </h1> -->
             <form action="">
                 <input type="text" placeholder="Search for events...">
             </form>
@@ -60,7 +60,7 @@
             <div class="event-container">
                 <div class="event-name">
                     <h2>
-                        Event Name
+                        Event's Name
                     </h2>
                 </div>
                 <div class="event-description">
@@ -68,66 +68,70 @@
                         What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a
-                        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                        publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes
-                        by accident, sometimes on purpose (injected humour and the like).
+                        page when looking at its layout.
                     </p>
+                </div>
+                <div class="event-details">
+                    <table style="width:12%">
+                        <tr>
+                            <td>Organizer:</td>
+                            <td>Smith</td>
+                        </tr>
+                        <tr>
+                            <td>Time:</td>
+                            <td>Jackson</td>
+                        </tr>
+                        <tr>
+                            <td>Date:</td>
+                            <td>Jackson</td>
+                        </tr>
+                        <tr>
+                            <td>Location:</td>
+                            <td>Jackson</td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="event-team">
+                    <h3>
+                        Registered Teams
+                    </h3>
+                    <div class="teams">
+                        <ul>
+                            <li class="team-name">
+                                <p>
+                                    Team Name
+                                </p>
+                                <ol>
+                                    <li>James</li>
+                                    <li>Susan</li>
+                                    <li>David</li>
+                                </ol>
+                            </li>
+                            <li class="team-name">
+                                <p>
+                                    Team Name
+                                </p>
+                                <ol>
+                                    <li>Michael</li>
+                                    <li>Jackson</li>
+                                    <li>Adbul</li>
+                                </ol>
+                            </li>
+                            <li class="team-name">
+                                <p>
+                                    Team Name
+                                </p>
+                                <ol>
+                                    <li>Elton</li>
+                                    <li>John</li>
+                                    <li>Presley</li>
+                                </ol>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="event-container">
-                <div class="event-name">
-                    <h2>
-                        Event Name
-                    </h2>
-                </div>
-                <div class="event-description">
-                    <p>
-                        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a
-                        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                        publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes
-                        by accident, sometimes on purpose (injected humour and the like).
-                    </p>
 
-                </div>
-            </div>
-            <div class="event-container">
-                <div class="event-name">
-                    <h2>
-                        Event Name
-                    </h2>
-                </div>
-                <div class="event-description">
-                    <p>
-                        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a
-                        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                        publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes
-                        by accident, sometimes on purpose (injected humour and the like).
-                    </p>
-
-                </div>
-            </div>
-            <div class="event-container">
-                <div class="event-name">
-                    <h2>
-                        Event Name
-                    </h2>
-                </div>
-                <div class="event-description">
-                    <p>
-                        What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
-                        specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
-                        passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a
-                        page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                        publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes
-                        by accident, sometimes on purpose (injected humour and the like).
-                    </p>
-
-                </div>
-            </div>
         </section>
 
     </main>
