--- a/eventDetails.html
+++ b/eventDetails.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Event</title>
+    <title>Event Details</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
